commit 2, draft 3 fixed li, not aligned, changed css/style line 56 to inline-table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ form {
 #results li {
     width: 33%;
     margin-right: -4px;
-    display: inline-block;
+    display: inline-table;
     padding: 10px;
 }
 
